--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 
 .container {
   text-align: center;
-  margin: 5rem 15rem;
+  margin: 5rem 26rem;
   border-radius: 4px;
   background-color: #1f2937;
 }
@@ -120,4 +120,8 @@ hr {
   background-color: #3a69d2;
   color: white;
   font-size: 16px;
+}
+
+.tasks {
+  padding: 10px;
 }
